# calc-app

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
.github/workflows/: build-windows.yml
src/: calcengine.cpp  calcengine.h
tests/: calctest.cpp
ui/: main.qml
ui/components/: CalcButton.qml
ui/styles/: Theme.qml
ui/views/: CalcView.qml  DesignOverlay.qml  SecretMenuView.qml
